--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -4,10 +4,10 @@
 FROM python:3.8.7
 
 # Set the working directory to /app
-WORKDIR /app
+#WORKDIR /app
 
 # Copy the current directory contents into the container at /app
-ADD app/ /app
+ADD ./app /app
 
 # upgrade pip
 RUN pip install --upgrade pip
