--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -4,7 +4,7 @@
 FROM python:3.8.7
 
 # Set the working directory to /app
-#WORKDIR /app
+WORKDIR /app
 
 # Copy the current directory contents into the container at /app
 ADD . /app
