--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,17 +4,16 @@ app:
   expose:
     - "8000"
   volumes:
-    - /usr/src/app/static
+    - /app/static
   env_file: .env
   command: bash -c "cd /usr/src && APP_SETTING=.env python -m server"
+# command: bash -c "while true; do echo 'sleeping...' && sleep 10; done"
 
 nginx:
   restart: always
   build: ./nginx/
   ports:
-    - "80:80"
-  volumes:
-    - /www/static
+    - "6500:80"
   volumes_from:
     - app
   links:
