--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ app:
   volumes:
     - /app/static
   env_file: .env
-  command: bash -c "cd /usr/src && APP_SETTING=.env python -m app/server"
+  command: bash -c "APP_SETTING=.env python -m server"
 # command: bash -c "while true; do echo 'sleeping...' && sleep 10; done"
 
 nginx:
